try to fix word-wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,8 +46,8 @@ footer {
     font-size: .8em;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
+ul.posts {
+    margin: 20px auto 40px;
     font-size: 1.5em;
 }
 
@@ -66,6 +66,7 @@ ul.posts li {
     min-height: 250px;
     padding: 10px;
     margin: 10px;
+    word-wrap: break-word;
 }
 
 .card_small{
@@ -76,6 +77,7 @@ ul.posts li {
     min-height: 250px;
     padding: 10px;
     margin: 10px;
+    word-wrap: break-word;
 }
 .card h2{
   font-weight: lighter;
